Try using integration runner Dockerfile from 23.8