@@ -4,13 +4,24 @@ set -e
 mkdir -p /etc/docker/
 echo '{
     "ipv6": true,
-    "fixed-cidr-v6": "fd00::/8",
+    "fixed-cidr-v6": "2001:db8:1::/64",
     "ip-forward": true,
     "log-level": "debug",
     "storage-driver": "overlay2",
-    "insecure-registries" : ["dockerhub-proxy.dockerhub-proxy-zone:5000"],
-    "registry-mirrors" : ["http://dockerhub-proxy.dockerhub-proxy-zone:5000"]
+    "insecure-registries" : ["65.108.242.32:5000"],
+    "registry-mirrors" : ["http://65.108.242.32:5000"]
 }' | dd of=/etc/docker/daemon.json 2>/dev/null
+
+# if [ -f /sys/fs/cgroup/cgroup.controllers ]; then
+#     # move the processes from the root group to the /init group,
+#     # otherwise writing subtree_control fails with EBUSY.
+#     # An error during moving non-existent process (i.e., "cat") is ignored.
+#     mkdir -p /sys/fs/cgroup/init
+#     xargs -rn1 < /sys/fs/cgroup/cgroup.procs > /sys/fs/cgroup/init/cgroup.procs || :
+#     # enable controllers
+#     sed -e 's/ / +/g' -e 's/^/+/' < /sys/fs/cgroup/cgroup.controllers \
+#         > /sys/fs/cgroup/cgroup.subtree_control
+# fi
 
 # In case of test hung it is convenient to use pytest --pdb to debug it,
 # and on hung you can simply press Ctrl-C and it will spawn a python pdb,
@@ -30,16 +41,22 @@ while true; do
         cat /ClickHouse/tests/integration/dockerd.log >&2
         exit 1;
     fi
-    sleep 0.1
+    # For whatever reason docker seems to be unable to start in 10 seconds, so effectivly increeaing timeout to 30 seconds
+    sleep 0.3
 done
 set -e
 
 # cleanup for retry run if volume is not recreated
-# shellcheck disable=SC2046
 {
-    docker ps -aq | xargs -r docker kill || true
-    docker ps -aq | xargs -r docker rm || true
+    docker ps --all --quiet | xargs --no-run-if-empty docker kill || true
+    docker ps --all --quiet | xargs --no-run-if-empty docker rm || true
 }
+
+java_path="$(update-alternatives --config java | sed -n 's/.*(providing \/usr\/bin\/java): //p')"
+export JAVA_PATH=$java_path
+export SPARK_HOME="/spark-3.3.2-bin-hadoop3"
+export PATH=$SPARK_HOME/bin:$PATH
+export JAVA_TOOL_OPTIONS="-Djdk.attach.allowAttachSelf=true"
 
 echo "Start tests"
 export CLICKHOUSE_TESTS_SERVER_BIN_PATH=/clickhouse
@@ -49,12 +66,16 @@ export CLICKHOUSE_ODBC_BRIDGE_BINARY_PATH=/clickhouse-odbc-bridge
 export CLICKHOUSE_LIBRARY_BRIDGE_BINARY_PATH=/clickhouse-library-bridge
 
 export DOCKER_BASE_TAG=${DOCKER_BASE_TAG:=latest}
+export DOCKER_DOTNET_CLIENT_TAG=${DOCKER_DOTNET_CLIENT_TAG:=latest}
 export DOCKER_HELPER_TAG=${DOCKER_HELPER_TAG:=latest}
+export DOCKER_KERBERIZED_HADOOP_TAG=${DOCKER_KERBERIZED_HADOOP_TAG:=latest}
+export DOCKER_KERBEROS_KDC_TAG=${DOCKER_KERBEROS_KDC_TAG:=latest}
 export DOCKER_MYSQL_GOLANG_CLIENT_TAG=${DOCKER_MYSQL_GOLANG_CLIENT_TAG:=latest}
 export DOCKER_DOTNET_CLIENT_TAG=${DOCKER_DOTNET_CLIENT_TAG:=latest}
 export DOCKER_MYSQL_JAVA_CLIENT_TAG=${DOCKER_MYSQL_JAVA_CLIENT_TAG:=latest}
 export DOCKER_MYSQL_JS_CLIENT_TAG=${DOCKER_MYSQL_JS_CLIENT_TAG:=latest}
 export DOCKER_MYSQL_PHP_CLIENT_TAG=${DOCKER_MYSQL_PHP_CLIENT_TAG:=latest}
+export DOCKER_NGINX_DAV_TAG=${DOCKER_NGINX_DAV_TAG:=latest}
 export DOCKER_POSTGRESQL_JAVA_CLIENT_TAG=${DOCKER_POSTGRESQL_JAVA_CLIENT_TAG:=latest}
 export DOCKER_KERBEROS_KDC_TAG=${DOCKER_KERBEROS_KDC_TAG:=latest}
 export DOCKER_KERBERIZED_HADOOP_TAG=${DOCKER_KERBERIZED_HADOOP_TAG:=latest}
